crates/atlas-runtime/tests/snapshots/assignment_target_tests__incdec_decrement_array.snap
---
source: crates/atlas-runtime/tests/assignment_target_tests.rs
expression: "program.items[0]"
---
Statement:
  Decrement:
    target:
      Index:
        target:
          Identifier:
            name: arr
            span:
              start: 0
              end: 3
        index:
          Single:
            Identifier:
              name: i
              span:
                start: 4
                end: 5
        span:
          start: 0
          end: 6
    span:
      start: 0
      end: 9
